hw6_lab10/tests/errors/sem_if_non_boolean.kt
// EXPECT: semantic error — if condition is not Boolean
fun main() {
    if (42) {
        println("bad")
    }
}
